# src/main/java/com/hiagosouza/api/quoted/controller/impl/UserController.java
@@ -3,11 +3,13 @@ package com.hiagosouza.api.quoted.controller.impl;
 import com.hiagosouza.api.quoted.api.UserApi;
 import com.hiagosouza.api.quoted.controller.BaseController;
 import com.hiagosouza.api.quoted.mapper.UserMapper;
-import com.hiagosouza.api.quoted.model.User;
+import com.hiagosouza.api.quoted.model.UserRequest;
 import com.hiagosouza.api.quoted.model.UserModel;
+import com.hiagosouza.api.quoted.model.UserResponse;
 import com.hiagosouza.api.quoted.services.impl.UserService;
 import jakarta.validation.Valid;
 import lombok.extern.log4j.Log4j2;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -15,18 +17,24 @@ import org.springframework.web.bind.annotation.*;
 import java.time.LocalDateTime;
 import java.util.Optional;
 
+import static com.hiagosouza.api.quoted.model.UserRequest.UserRoleEnum.USER;
+
 @RestController
 @Log4j2
 public class UserController extends BaseController implements UserApi {
+
+    @Autowired
     private final UserService userService;
 
     public UserController(UserService userService) {
         this.userService = userService;
     }
 
+    @Override
     @PostMapping("/user/register")
-    public ResponseEntity<User> createNewUser(@Valid @RequestBody User user) {
+    public ResponseEntity<UserResponse> createUser(@Valid @RequestBody UserRequest user) {
         log.info("---- Creating new user with document: {} ----", user.getDocument());
+        user.setUserRole(USER);
         user.setCreatedAt(LocalDateTime.now());
         user.setUpdatedAt(LocalDateTime.now());
         UserModel userModel = UserMapper.toModel(user);
